# transpilatron

./: .gitignore  README.md  go.sh  pyproject.toml
examples/: sieve.py  sort.py  web.py
src/transpilatron/: agent.py  prompts.py  sysprompt.py  telem.py  v.py
telemetry-server/: main.py  pyproject.toml
