[project]
name = "transpilatron"
version = "11.0.0"
description = "A tool for transpiling code from python to C using AI agents."
readme = "README.md"
authors = [
    { name = "Johnny Konczal", email = "johndrostan@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flask>=3.1.3",
    "twine>=6.2.0",
]
[project.scripts]
transpilatron = "transpilatron.agent:main"
